--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 		</aside>
 	</body>
 </head>
-<footer>
+<div id="Footer" class="container">
 	<p>© Copyright 2016 Shaina Veloz </p>
-</footer>
+</div>
 </html>
