--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
 		</div>
 	</aside>
 </body>
-<footer>
+<div id="Footer" class="container">
 	<p>© Copyright 2016 Shaina Veloz</p>
-</footer>
+</div>
 </html>
