--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<a href="Portfolio.html">Portfolio</a>
 </head>
 	<BODY>
+		<div class="page wrap">
 		<div id="Main" class="container">
 			<h2>About Me</h2>
 			<figure id="bio-image">
@@ -30,9 +31,10 @@
 				<img src="assets/images/1459934620_stackoverflow.png" alt="Icon" height="50px" width="50px">
 			</ul>
 		</div>
-	</aside>		
+	</aside>
+	</div>		
 	</BODY>
-<div id="Footer" class="container">
+<div id="Footer" class="site-footer">
 	<p>© Copyright 2016 Shaina Veloz</p>
 </div>
 </html>
