--- a/portfolio.html
+++ b/portfolio.html
@@ -4,31 +4,67 @@
 	<title>Portfoio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<h1>Shaina Veloz</h1>
 </head>
-	<body>
-		<div id="Section" class="container">
-			<h2>Porfolio</h2>
-			<ul>
-				<p>Hangman</p>
-				<p>RPG Game</p>
-				<p>Trivia Game</p>
-				<p>Rutgers Info Widget</p>
-				<p>Rock Paper Scissors</p>
-			</ul>			
+<body>
+
+	<header id="masthead">
+		<div class="container">
+			<a href="index.html" id="logo">Shaina</a>
+			<nav>
+				<a href="index.html">About</a>
+				<a href="portfolio.html">Portfolio</a>
+				<a href="contact.html">Contact</a>
+			</nav>
 		</div>
-	<aside>
-		<h3>Connect with Me</h3>
-		<div id="Sidebar" class="container">
-			<ul>
-				<img src="assets/images/1459934580_github-social-media.svg" alt="Icon" height="50px" width="50px">
-				<img src="assets/images/1459934829_linkedin_square_color.svg" alt="Icon" height="50px" width="50px">
-				<img src="assets/images/1459934620_stackoverflow.png" alt="Icon" height="50px" width="50px">
-			</ul>
+	</header>
+
+	<div id="main-container" class="container">
+		<section class="main-section">
+			<h1>Portfolio</h1>
+
+			<div class="work">
+				<img src="https://pbs.twimg.com/profile_images/3222519831/245792294e1d0d37448e073d6b43d2b2.jpeg" alt="hangman">
+
+				<h3>Hangman</h3>
+			</div>
+			<div class="work">
+				<img src="https://pbs.twimg.com/profile_images/3579066219/77463286d2afefccf649ebd8d5501545.jpeg" alt="RPG Game">
+
+				<h3>RPG Game</h3>
+			</div>
+			<div class="work">
+				<img src="https://pbs.twimg.com/profile_images/3166332080/e4cc9d03e567264205e34d6fd7fe92bf.jpeg" alt="Trivia Game">
+
+				<h3>Trivia Game</h3>
+			</div>
+			<div class="work">
+				<img src="https://pbs.twimg.com/profile_images/3558530492/9bac731bc8cf92db3ed6a5325c6b98c3.jpeg" alt="UCF Info Widget">
+
+				<h3>UCF Info Widget</h3>
+			</div>
+			<div class="work">
+				<img src="https://pbs.twimg.com/profile_images/3419149450/e7128d853d3171eadbe85475c58734ce.jpeg" alt="Rock Paper Scissors">
+
+				<h3>Rock Paper Scissors</h3>
+			</div>
+
+		</section>
+
+		<section class="sidebar">
+			<div id="connect">
+				<h2>Connect with Me</h2>
+
+				<img src="assets/images/1459934580_github-social-media.svg" class="social" alt="Github">
+				<img src="assets/images/1459934829_linkedin_square_color.svg" class="social" alt="LinkedIn">
+				<img src="assets/images/1459934620_stackoverflow.png" class="social" alt="Stack Overflow">
+			</div>
+		</section>
+	</div>
+
+	<footer>
+		<div class="container">
+			&copy; Copyright 2016 Shaina Veloz
 		</div>
-	</aside>
+	</footer>
 </body>
-<div id="Footer" class="container">
-	<p>© Copyright 2016 Shaina Veloz</p>
-</div>
 </html>
