--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<body>
 		<header id="masthead">
 			<div class="container">
-				<a href="index.html" id="logo">Shaina</a>
+				<a href="index.html" id="logo">Shaina Veloz</a>
 				<nav>
 					<a href="index.html">About</a>
 					<a href="portfolio.html">Portfolio</a>
