--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
 	<header id="masthead">
 		<div class="container">
-			<a href="index.html" id="logo">Shaina</a>
+			<a href="index.html" id="logo">Shaina Veloz</a>
 			<nav>
 				<a href="index.html">About</a>
 				<a href="portfolio.html">Portfolio</a>
