--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
 	<title>Contact Info</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -44,9 +44,8 @@
 			<div id="connect">
 				<h2>Connect with Me</h2>
 
-				<img src="assets/images/1459934580_github-social-media.svg" class="social" alt="Github">
-				<img src="assets/images/1459934829_linkedin_square_color.svg" class="social" alt="LinkedIn">
-				<img src="assets/images/1459934620_stackoverflow.png" class="social" alt="Stack Overflow">
+				<a href="https://github.com/shainaveloz?tab=overview&from=2016-08-01&to=2016-08-31&utf8=%E2%9C%93"><img src="assets/images/1459934580_github-social-media.svg" class="social" alt="Github"></a>
+				<a href="https://www.linkedin.com/in/shaina-veloz-1884433b?trk=nav_responsive_tab_profile_pic"><img src="assets/images/1459934829_linkedin_square_color.svg" class="social" alt="LinkedIn"></a>
 			</div>
 		</section>
 	</div>
