--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
 	<title>Portfoio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -23,29 +23,24 @@
 			<h1>Portfolio</h1>
 
 			<div class="work">
-				<img src="https://pbs.twimg.com/profile_images/3222519831/245792294e1d0d37448e073d6b43d2b2.jpeg" alt="hangman">
+				<a href="https://github.com/shainaveloz/Doggie-Daycare"><img src="./assets/images/dog.jpg" alt="doggie"></a>
 
-				<h3>Hangman</h3>
+				<h3>Doggie Daycare</h3>
 			</div>
 			<div class="work">
-				<img src="https://pbs.twimg.com/profile_images/3579066219/77463286d2afefccf649ebd8d5501545.jpeg" alt="RPG Game">
+				<a href="https://github.com/shainaveloz/DevMatch"><img src="../DevMatch/public/img/code2.jpg" alt="Dev Match"></a>
 
-				<h3>RPG Game</h3>
+				<h3>Dev Match</h3>
 			</div>
 			<div class="work">
-				<img src="https://pbs.twimg.com/profile_images/3166332080/e4cc9d03e567264205e34d6fd7fe92bf.jpeg" alt="Trivia Game">
+				<a href="https://github.com/shainaveloz/week-4-game"><img src="./assets/images/sailor_moon.jpg" alt="Crystal Game"></a>
 
-				<h3>Trivia Game</h3>
+				<h3>Crystal Game</h3>
 			</div>
 			<div class="work">
-				<img src="https://pbs.twimg.com/profile_images/3558530492/9bac731bc8cf92db3ed6a5325c6b98c3.jpeg" alt="UCF Info Widget">
+				<a href="https://github.com/shainaveloz/res-ticket-app"><img src="../res-ticket-app/app/views/res-1.jpg" alt="Hot Ticket"></a>
 
-				<h3>UCF Info Widget</h3>
-			</div>
-			<div class="work">
-				<img src="https://pbs.twimg.com/profile_images/3419149450/e7128d853d3171eadbe85475c58734ce.jpeg" alt="Rock Paper Scissors">
-
-				<h3>Rock Paper Scissors</h3>
+				<h3>Hot Ticket App</h3>
 			</div>
 
 		</section>
@@ -54,9 +49,8 @@
 			<div id="connect">
 				<h2>Connect with Me</h2>
 
-				<img src="assets/images/1459934580_github-social-media.svg" class="social" alt="Github">
-				<img src="assets/images/1459934829_linkedin_square_color.svg" class="social" alt="LinkedIn">
-				<img src="assets/images/1459934620_stackoverflow.png" class="social" alt="Stack Overflow">
+				<a href="https://github.com/shainaveloz?tab=overview&from=2016-08-01&to=2016-08-31&utf8=%E2%9C%93"><img src="assets/images/1459934580_github-social-media.svg" class="social" alt="Github"></a>
+				<a href="https://www.linkedin.com/in/shaina-veloz-1884433b?trk=nav_responsive_tab_profile_pic"><img src="assets/images/1459934829_linkedin_square_color.svg" class="social" alt="LinkedIn"></a>
 			</div>
 		</section>
 	</div>
