--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
 	<TITLE>Shaina Veloz</TITLE>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -25,16 +25,17 @@
 				<img src="assets/images/774361_10151645262563312_1384364184_o.jpg" alt="Shaina" class="auth-image" height="275px" width="150px">
 		
 			<p>	Hi There! You have found my page! My name is Shaina Veloz and I am originally from the Bronx,NY but I was also raised in Miami,FL. I graduated from the University of Central Florida with a Bachelors of Science degree in Psychology and I am currently enrolled within the UCF Coding Bootcamp with hopes of learning more about coding and eventually being able to work within the gaming industry.</p>
-			<p>One of my hobbies/love is spending my time at the gym. If I am not learning to code then I am more than likely at the gym. It really is my safe haven, if I am having a stressful day it is tehe perfect release. Even when I am having an amazing day, it is my place to celebrate. It is my place of zen. I also LOVE PUPPIES!!!</p>
+			<p>I recently embarked on a career change to become a web developer. My interest sparked while working at the Institute for Simulation and Training (IST)- NASA-gOE lab where coding became one of my responsibilities. Since then, I’ve enrolled in the first cohort of the University of Central Florida's Coding Boot Camp. As a Front End Developer, I’m proficient in HTML5, CSS3, JavaScript, JQuery, JSON API, AJAX, Firebase, GitHub, Heroku, and command line. In addition, I have completed studying Back End Development working with languages such as Node.js, Express.js, React.js, Angular.js, MySQL, Mongo DB, Handlebars.js and PHP frameworks such as Laravel where I’ll become a Full Stack Web Developer upon my graduation in late September.
+
+				I’m in the market for a Jr. Web Developer, Full Stack Web Developer or Software Developer opportunities and am open to relocating.  Please feel free to message me directly or contact me</p>
 		</section>
 		
 		<section class="sidebar">
 			<div id="connect">
 			<h2>Connect with Me</h2>
-	
-				<img src="assets/images/1459934580_github-social-media.svg" alt="Github" class="social">
-				<img src="assets/images/1459934829_linkedin_square_color.svg" alt="LinkedIn" class="social" >
-				<img src="assets/images/1459934620_stackoverflow.png" alt="Stack Overflow" class="social" >
+
+				<a href="https://github.com/shainaveloz?tab=overview&from=2016-08-01&to=2016-08-31&utf8=%E2%9C%93"><img src="assets/images/1459934580_github-social-media.svg" class="social" alt="Github"></a>
+				<a href="https://www.linkedin.com/in/shaina-veloz-1884433b?trk=nav_responsive_tab_profile_pic"><img src="assets/images/1459934829_linkedin_square_color.svg" class="social" alt="LinkedIn"></a>
 			</div>
 		</section>
 	</div>
