--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 		<section class="main-section">
 			<h1>Contact</h1>
 
-			<form id="contact-form">
+			<form id="contact-form" action="mailto:shaina.veloz@gmail.com" method="post" enctype="text/plain">
 				<ul>
 					<li>
 						<label for="name">Name</label>
@@ -36,7 +36,7 @@
 						<textarea id="message" name="message" required="required"></textarea>
 					</li>
 				</ul>
-				<input type="submit">
+				<input type="submit" value="Send">
 			</form>
 		</section>
 
