--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	
 <footer>
 		<div class="container">
-			&copy; Copyright 2016 Your Name
+			&copy; Copyright 2016 Shaina Veloz
 		</div>
 	</footer>
 </body>
