--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 				<h3>Crystal Game</h3>
 			</div>
 			<div class="work">
-				<a href="https://github.com/shainaveloz/res-ticket-app"><img src="../res-ticket-app/app/views/res-1.jpg" alt="Hot Ticket"></a>
+				<a href="http://sheltered-spire-81004.herokuapp.com/"><img src="../res-ticket-app/app/views/res-1.jpg" alt="Hot Ticket"></a>
 
 				<h3>Hot Ticket App</h3>
 			</div>
