took off angular syntax

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html>
 <head>
 	<title>Contact Info</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
