--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html>
 <head>
 	<TITLE>Shaina Veloz</TITLE>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
